# Term_chat

./: .env  .gitignore  Cargo.toml  README.MD
client/: Cargo.toml
client/src/: main.rs
src/: main.rs  routes.rs
src/handlers/: drop_user.rs  establish_connection.rs  mod.rs  new_channel.rs  new_message.rs  new_user.rs  show_channels.rs  show_users.rs
src/models/: broadcast.rs  channel.rs  mod.rs  user.rs
