[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18", features = ["json"]}
tokio = { version = "1", features = ["full"] }
serde = {version="1.0.106", features=["derive"]}
serde_json = { version = "1.0" }

#sse
actix-web-lab = "0.18.5"
parking_lot = "0.12.1"
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }