[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18", features = ["json", "stream"]}
tokio = { version = "1", features = ["full"] }
serde = {version="1.0.106", features=["derive"]}
serde_json = { version = "1.0" }
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
bytes = "1.4.0"
